# candor-ai

./: .gitignore  .rustfmt.toml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  SYSTEM.md  candor-ai-design.md  candor.toml  install.sh
.github/workflows/: ci.yml  release.yml
crates/candor-cognitive/: Cargo.toml
crates/candor-cognitive/src/: backends.rs  engine.rs  lib.rs  local.rs  real_embed.rs
crates/candor-core/: Cargo.toml
crates/candor-core/benches/: state.rs
crates/candor-core/src/: protocol.rs  state.rs
crates/candor-core/tests/: comprehensive.rs  integration.rs
crates/candor-graph/: Cargo.toml
crates/candor-graph/src/: checkpoint.rs  full_hooks.rs  hooks.rs  recovery.rs  runner.rs
crates/candor-graph/tests/: hooks_integration.rs  phase3_orchestration.rs
crates/candor-mcp/: Cargo.toml
crates/candor-mcp/src/: bridge.rs  client.rs  transport.rs
crates/candor-mcp/tests/: mcp_integration.rs
crates/candor-memory/: Cargo.toml
crates/candor-memory/src/: store.rs
crates/candor-memory/tests/: memory_integration.rs  phase4_compaction.rs
crates/candor-orchestrator/: Cargo.toml
crates/candor-orchestrator/src/: approval_gate.rs  engine.rs  isa_parser.rs  lib.rs  markdown_router.rs  memory_nudge.rs  skills.rs  trajectory.rs
crates/candor-orchestrator/tests/: phase6_trajectory.rs  swe_level_tests.rs
crates/candor-sandbox/: Cargo.toml
crates/candor-sandbox/src/: cross_platform.rs  lib.rs  process_exec.rs  unified.rs  wasm_exec.rs
crates/candor-sandbox/tests/: phase2_isolation.rs  wasm_integration.rs
crates/candor-sentinel/: Cargo.toml
crates/candor-sentinel/src/: ast_checker.rs  doctrine.rs  interceptor.rs  lib.rs  rules.rs
crates/candor-sentinel/src/ast/: code_quality.rs  fn_analysis.rs  mod.rs  narration.rs
crates/candor-sentinel/tests/: interceptor_tests.rs  phase5_sentinel.rs
crates/candor-telemetry/: Cargo.toml
crates/candor-telemetry/src/: lib.rs
crates/candor-telemetry/tests/: telemetry_integration.rs
crates/candor-tools/: Cargo.toml
crates/candor-tools/src/: fs_tools.rs  git_tools.rs  search_tools.rs  shell_tools.rs  test_tools.rs
crates/candor-tools/tests/: edge_cases.rs  git_tests.rs
desktop/: package-lock.json  package.json
docs/: README.md
examples/: quick_start.sh
