[package]
name = "candor-cognitive"
version.workspace = true
edition.workspace = true
description = "Heterogeneous LLM inference: Anthropic, OpenAI, DeepSeek, Gemini, LM Studio, Ollama"
license.workspace = true
repository.workspace = true

[features]
default = []
vulkan = []
cuda = []

[dependencies]
candor-core = { workspace = true }
candor-sandbox = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
