[package]
name = "candor-cognitive"
version.workspace = true
edition.workspace = true
description = "Heterogeneous LLM inference: Anthropic, OpenAI, DeepSeek, Gemini, LM Studio, Ollama"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
local-inference = ["dep:mistralrs"]
vulkan = []
cuda = []

[dependencies]
candor-core = { workspace = true }
candor-sandbox = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
mistralrs = { workspace = true, optional = true }
