[package]
name = "candor-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "state"
harness = false
