[package]
name = "candor-mcp"
version.workspace = true
edition.workspace = true
description = "MCP client (Model Context Protocol) with JSON-RPC 2.0 over stdio/HTTP"
license.workspace = true
repository.workspace = true

[dependencies]
candor-core = { workspace = true }
candor-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
