[package]
name = "candor-memory"
version.workspace = true
edition.workspace = true
description = "SurrealDB-backed memory with HNSW vector index and auto-compaction"
license.workspace = true
repository.workspace = true

[dependencies]
candor-core = { workspace = true }
candor-cognitive = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
surrealdb = { workspace = true, features = ["kv-mem"] }
