[package]
name = "candor-sentinel"
version.workspace = true
edition.workspace = true
description = "Deterministic guardrails: 6 rules + 10 doctrine principles for agent safety"
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
candor-core = { workspace = true }
candor-cognitive = { workspace = true }
candor-graph = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1"
async-trait = { workspace = true }
