[package]
name = "candor-telemetry"
version.workspace = true
edition.workspace = true
description = "OpenTelemetry tracing and logging integration"
license.workspace = true
repository.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["trace", "grpc-tonic"] }
tokio = { workspace = true }
